arrows control was added to select

--- a/app/pug/partials/lang-alt-select.pug
+++ b/app/pug/partials/lang-alt-select.pug
@@ -3,7 +3,7 @@ include /partials/select
 mixin lang-alt-select(props = {})
 
   +select({
-    search:true, search:true,
+    search:true,
     label:{name:'lt', content:`<span>Lithianian</span>`},
     options:[
       {name:'lt', content:`<span>Lithianian</span>`},
