--- a/app/pug/partials/lang-select.pug
+++ b/app/pug/partials/lang-select.pug
@@ -3,10 +3,12 @@ include /partials/select
 mixin lang-select(props = {})
 
   +select({
-    bordered:true, selected:true, auto:true,
+    bordered:true, auto:true,
     label:{name:'eng', content:`<img src="images/flags/gb.svg"/><span>English</span>`},
     options:[
       {name:'eng', content:`<img src="images/flags/gb.svg"/><span>English</span>`},
+      {name:'lt', content:`<img src="images/flags/lt.svg"/><span>Lithuanian</span>`},
+      {name:'lt', content:`<img src="images/flags/lt.svg"/><span>Lithuanian</span>`},
       {name:'lt', content:`<img src="images/flags/lt.svg"/><span>Lithuanian</span>`},
     ]
   })
