--- a/app/sass/components/select.sass
+++ b/app/sass/components/select.sass
@@ -73,7 +73,7 @@ $select-height: 45px
       height: 6px
       transform-origin: center
       +bg-img('../images/icons/triangle-down-blue.svg', 11px 6px)
-  &__wrap
+  &__dropdown
     position: absolute
     display: none
     min-width: 100%
@@ -83,12 +83,12 @@ $select-height: 45px
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15)
     overflow: hidden
     z-index: 200
+    &-scroll
+      max-height: 168px
   &__search
     padding: 10px
     width: auto
   &__options
-    &-scroll
-      max-height: 168px
   &__option
     position: relative
     overflow: hidden
@@ -108,12 +108,6 @@ $select-height: 45px
     &:hover
       color: $c-white
       background-color: rgba($c-surfie-green, 0.8)
-    // State
-    &.is-selected
-      font-weight: 600
-      color: $c-tundora
-      background-color: $c-surfie-green
-      color: $c-white
     &-wave
       position: absolute
       display: block
@@ -122,6 +116,17 @@ $select-height: 45px
       transform: scale(0)
       z-index: -1
       animation: ripple 0.8s linear
+    // State
+    &.is-selected
+      font-weight: 600
+      color: $c-tundora
+      background-color: $c-surfie-green
+      color: $c-white
+    &.is-focused
+      font-weight: 600
+      color: $c-tundora
+      background-color: $c-surfie-green
+      color: $c-white
 
 @keyframes ripple
   100%
