--- a/app/sass/components/checkbox.sass
+++ b/app/sass/components/checkbox.sass
@@ -43,10 +43,10 @@
       transition: 0.2s
       background:
         image: url('../images/icons/check.svg')
-        color: $c-surfie-green
         size: 10px 8px
         repeat: no-repeat
         position: center
   .checkbox__input:checked ~ .checkbox__checkmark
+    background-color: $c-surfie-green
     &:before
       opacity: 1
