--- a/app/pug/pages/employer-application-page/card-1.pug
+++ b/app/pug/pages/employer-application-page/card-1.pug
@@ -1,6 +1,6 @@
 .application-form__card
   .application-form__card-line
-    .column-group.column-group--sm
+    .column-group.column-group--md
       .column-group__item
         +input-animation({label:'Name, surname', required:true})(type="text" id="name")
       .column-group__item
