--- a/app/pug/pages/application-page/step-3/card-3.pug
+++ b/app/pug/pages/application-page/step-3/card-3.pug
@@ -5,7 +5,7 @@
         h4 Bank details for payout:
       .row
         .col-12.col-md-6
-          .column-group.column-group--sm
+          .column-group.column-group--md
             .column-group__item
               +input-animation({label:'Account holder', required:true})(type="text" id="holder")
             .column-group__item
