--- a/app/sass/components/select.sass
+++ b/app/sass/components/select.sass
@@ -88,7 +88,6 @@ $select-height: 45px
   &__search
     padding: 10px
     width: auto
-  &__options
   &__option
     position: relative
     overflow: hidden
@@ -101,6 +100,7 @@ $select-height: 45px
     cursor: pointer
     color: $c-silver-chalice
     z-index: 1
+    transition: 0.2s
     img
       max-width: 18px
     &>*:not(:last-child)
@@ -108,14 +108,6 @@ $select-height: 45px
     &:hover
       color: $c-white
       background-color: rgba($c-surfie-green, 0.8)
-    &-wave
-      position: absolute
-      display: block
-      background-color: $c-surfie-green
-      border-radius: 100%
-      transform: scale(0)
-      z-index: -1
-      animation: ripple 0.8s linear
     // State
     &.is-selected
       font-weight: 600
@@ -127,8 +119,5 @@ $select-height: 45px
       color: $c-tundora
       background-color: $c-surfie-green
       color: $c-white
-
-@keyframes ripple
-  100%
-    opacity: 0
-    transform: scale(2.5)
+      &:hover
+        background-color: rgba($c-surfie-green, 0.8)
