header component was created

--- a/app/pug/login-page-loading.pug
+++ b/app/pug/login-page-loading.pug
@@ -1,6 +1,6 @@
 extends /layouts/main
 include /partials/input-animation
-include /partials/lang-select
+include /partials/lang-select-alt
 include /partials/spinner
 
 block variables
@@ -10,7 +10,7 @@ block content
   .login-page
     .container
       .login-page__lang
-        +lang-select()
+        +lang-select-alt()
       .login-page__box
         .form-box
           .form-box__header
