--- a/app/pug/pages/application-page/step-1/card-2.pug
+++ b/app/pug/pages/application-page/step-1/card-2.pug
@@ -38,13 +38,13 @@
                   .input-group__prepend
                     p From
                   .input-group__input
-                    +lang-alt-select()
+                    +translation-select()
               .col-12.col-lg-6
                 .input-group
                   .input-group__prepend
                     p To
                   .input-group__input
-                    +lang-alt-select()
+                    +translation-select()
         .col-12.col-md-6.col-lg-5
           .form-group
             .form-group__header
