--- a/app/pug/pages/application-page/step-1/card-3.pug
+++ b/app/pug/pages/application-page/step-1/card-3.pug
@@ -34,7 +34,7 @@
             .column-group__item
               .row
                 .col-12.col-md-4.mb-3.mb-md-0
-                  +lang-alt-select()
+                  +translation-select()
                 .col-12.col-md-8
                   .input-group
                     .input-group__prepend
