--- a/app/pug/pages/application-page/step-1/card-7.pug
+++ b/app/pug/pages/application-page/step-1/card-7.pug
@@ -18,7 +18,7 @@
               p What languages do you write?
             .row
               .col-12.col-lg-6
-                +lang-alt-select()
+                +translation-select()
         .col-12.col-md-6
           .form-group
             .form-group__header
