--- a/app/pug/partials/translation-select.pug
+++ b/app/pug/partials/translation-select.pug
@@ -1,6 +1,6 @@
 include /partials/select
 
-mixin lang-alt-select(props = {})
+mixin translation-select(props = {})
 
   +select({
     search:true,
