--- a/app/sass/base/fonts.sass
+++ b/app/sass/base/fonts.sass
@@ -9,3 +9,5 @@
 +font-face("Open Sans", "../fonts/OpenSans/OpenSans-Regular", 400)
 +font-face("Open Sans", "../fonts/OpenSans/OpenSans-SemiBold", 600)
 +font-face("Open Sans", "../fonts/OpenSans/OpenSans-Bold", 700)
+// Gilroy
++font-face("Gilroy", "../fonts/Gilroy/Gilroy-Medium", 500)
