--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -17,6 +17,7 @@
 @import ./pages/login-page
 @import ./pages/application-page
 @import ./pages/employer-application-page
+@import ./pages/settings-page
 // Components
 @import ./components/spinner
 @import ./components/columng-group
@@ -36,6 +37,7 @@
 @import ./components/button-group
 @import ./components/button
 @import ./components/select
+@import ./components/dropdown
 @import ./components/status-message
 @import ./components/modal-dialog
 @import ./components/inner-header
@@ -46,3 +48,9 @@
 @import ./components/drag-and-drop-box
 @import ./components/registration-success-modal
 @import ./components/datepicker
+@import ./components/header
+@import ./components/navigation
+@import ./components/notifications-dropdown
+@import ./components/user-dropdown
+@import ./components/user-dropdown-menu
+@import ./components/unread
