--- a/app/pug/pages/application-page/step-1/card-4.pug
+++ b/app/pug/pages/application-page/step-1/card-4.pug
@@ -32,7 +32,7 @@
               p What combinations do you translate?
             .row
               .col-12.col-lg-6
-                +lang-alt-select()
+                +translation-select()
         .col-12.col-md-6
           .form-group
             .form-group__header
