--- a/app/sass/abstract/variables.sass
+++ b/app/sass/abstract/variables.sass
@@ -36,7 +36,8 @@ $c-brick-red      : #CC2936
 // UI elements
 $body-bg: $c-athens-gray
 // Sizes
-$r-primary: 3px
+$r-primary  : 3px
+$r-secondary: 10px
 // Shadows
 $s-primary: 0px 4px 5px rgba(0, 0, 0, 0.05)
 // Overlays
