--- a/app/sass/components/inner-header.sass
+++ b/app/sass/components/inner-header.sass
@@ -2,10 +2,12 @@
   width: 100%
   background-color: $c-white
   box-shadow: $s-primary
-  border-radius: 0 0 10px 10px;
+  border-radius: 0 0 $r-secondary $r-secondary
   padding: 20px 15px
   &__wrap
     display: flex
+    max-width: $cnt-xxl
+    margin: 0 auto
     align-items: center
   &__logo
     margin-right: 20px
