--- a/app/pug/partials/user-dropdown-menu.pug
+++ b/app/pug/partials/user-dropdown-menu.pug
@@ -3,7 +3,7 @@ mixin user-dropdown-menu(props = {})
   .user-dropdown-menu
     .user-dropdown-menu__items
       .user-dropdown-menu__item
-        a(href="#").user-dropdown-menu__link
+        a(href="settings-page.html").user-dropdown-menu__link
           .user-dropdown-menu__icon
             +icon({name:'cog', fill:'surfie-green', width:'18', height:'18'})
           .user-dropdown-menu__title Settings
