--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -23,6 +23,9 @@
 @import ./components/columng-group
 @import ./components/row-group
 @import ./components/svg-icon
+@import ./components/icon-inline
+@import ./components/avatar
+@import ./components/close
 @import ./components/link
 @import ./components/form
 @import ./components/form-box
@@ -36,8 +39,10 @@
 @import ./components/checkbox
 @import ./components/button-group
 @import ./components/button
+@import ./components/inline-button
 @import ./components/select
 @import ./components/dropdown
+@import ./components/tabs
 @import ./components/status-message
 @import ./components/modal-dialog
 @import ./components/inner-header
@@ -54,3 +59,9 @@
 @import ./components/user-dropdown
 @import ./components/user-dropdown-menu
 @import ./components/unread
+@import ./components/catalog
+@import ./components/info-list
+@import ./components/settings-general
+@import ./components/settings-education
+@import ./components/slill
+@import ./components/uploaded-documents
