--- a/app/sass/pages/settings-page.sass
+++ b/app/sass/pages/settings-page.sass
@@ -1,1 +1,8 @@
 .settings-page
+  padding-bottom: 40px
+  &__wrap
+    margin-top: 40px
+  &__title
+    margin-bottom: 15px
+  &__status
+    margin-bottom: 35px
