--- a/app/pug/partials/button.pug
+++ b/app/pug/partials/button.pug
@@ -1,5 +1,5 @@
 mixin button(props = {})
-  -const { tag, classes, bg, fluid, type, border, stadard } = props
+  -const { tag, classes, bg, fluid, type, size, border, stadard, shadow } = props
   -const tagType = tag ? tag : (attributes.href ? 'a' : 'button')
   -
     const classnames = classNames({
@@ -8,6 +8,8 @@ mixin button(props = {})
       [`button--${type}`]: type,
       [`button--bg-${bg}`]: bg,
       [`button--border-${border}`]: border,
+      [`button--size-${size}`]: size,
+      'button--shadow': shadow,
       [classes]: classes
     })
 
