--- a/app/sass/base/typography.sass
+++ b/app/sass/base/typography.sass
@@ -21,12 +21,20 @@ h3, .h3
   line-height: 1.2
   font-weight: 700
 h4, .h4
+  font-size: rem(18px)
+  line-height: 1.2
+  font-weight: 700
+h5, .h5
   font-size: rem(16px)
   line-height: 1.2
   font-weight: 600
 
 p, .p
   font-size: rem(16px)
+  line-height: 1.4
+  font-weight: 400
+.p-sm
+  font-size: rem(14px)
   line-height: 1.4
   font-weight: 400
 
@@ -42,6 +50,8 @@ p, .p
   color: $c-brick-red
 .text-boston-blue
   color: $c-boston-blue
+.text-silver-chalice
+  color: $c-silver-chalice
 
 // Font weights
 .font-regular
